--- a/css/detail.css
+++ b/css/detail.css
@@ -14,10 +14,21 @@
     font-size: 20px;
     box-shadow: 2px 2px 2px 2px rgb(212, 212, 212);
     border-radius: 30px;
-
 }
 
-#home:hover,
+#home:hover {
+    background-color: #fff;
+    border: none;
+    width: 150px;
+    height: 50px;
+    color: #000;
+    font-style: italic;
+    font-size: 20px;
+    box-shadow: 2px 2px 2px 2px rgb(212, 212, 212);
+    border-radius: 30px;
+    border: 4px solid black;
+}
+
 #home:focuss {
     background-color: white;
     border: none;
@@ -28,7 +39,6 @@
     font-size: 20px;
     box-shadow: 2px 2px 2px 2px rgb(212, 212, 212);
     border-radius: 30px;
-
 }
 
 #container {
