--- a/css/detail.css
+++ b/css/detail.css
@@ -1,3 +1,51 @@
+/* modal */
+#modal {
+    display: none;
+}
+
+/* 'modal' 외부의 영역입니다. */
+#modal.active {
+    display: block;
+    position: fixed;
+    top: 0;
+    left: 0;
+    /* 100%로 변경했습니다. */
+    width: 100%;
+    /* 100%로 변경했습니다. */
+    height: 100%;
+    background-color: #000000;
+    opacity: 0.8;
+    z-index: 1;
+}
+
+#modal_up {
+    display: none;
+}
+
+/* 'modal' 창입니다. */
+#modal_up.active {
+    color: black;
+
+    display: block;
+    word-wrap: break-word;
+    position: fixed;
+    
+    padding: 20px;
+    
+    width: 200px;
+    height: 100px;
+
+    z-index: 2;
+
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+
+    background-color: white;
+    border-radius: 20px;
+}
+/* modal */
+
 #homebox {
     text-align: center;
     padding: 50px 0px 50px 0px;
@@ -172,4 +220,39 @@
     font-style: italic;
     font-weight: 900;
     font-size: 15px;
+}
+
+.modal {
+    position: absolute;
+    top: 0;
+    left: 0;
+
+    width: 100%;
+    height: 100%;
+
+    display: none;
+
+}
+
+.modal.show {
+    display: block;
+}
+
+.modal_body {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+
+    width: 300px;
+    height: 300px;
+
+    padding: 40px;
+
+    text-align: center;
+
+    background-color: rgb(255, 255, 255);
+    border-radius: 10px;
+    box-shadow: 0 2px 3px 0 rgba(34, 36, 38, 0.15);
+
+    transform: translateX(-50%) translateY(-50%);
 }
