--- a/css/index.css
+++ b/css/index.css
@@ -1,86 +1,124 @@
 .cardbody {
-    height: 590px;
-    margin: 0px 25px 0px 25px
-}
-
-
-.alltitle {
-
+    width: 250px;
+    height: 450px;
+    margin: 0px 25px 0px 25px;
+  }
+  
+  .alltitle {
     font-size: 20px;
-}
-
-.allvote {
+    color: #fff;
+    margin: 15px 15px 15px 15px;
+  }
+  
+  .allvote {
+    color: #fff;
     font-size: 15px;
-}
-
-.card {
-    width: 300px;
-    margin: 10px 10px 50px 10px;
-}
-
-.cards {
-
+    margin: 0px 15px 0px 15px;
+  }
+  
+  .allpopularity{
+    color: #fff;
+    font-size: 15px;
+    margin: 0px 15px  0px 15px;
+  }
+  .allrelease_date{
+      color: #fff;
+      font-size: 15px;
+      margin: 0px 15px  0px 15px;
+    }
+  
+  .allrank {
+    height: 100px;
+    font-size: 100px;
+    color: #090909;
+    font-style: italic;
+    position: absolute;
+    margin-left: 20px;
+    font-size: 50px;
+    color: #fff;
+    text-shadow: 2px 2px 2px gray;
+  }
+  
+  .cards {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
     gap: 2rem;
     padding: 1rem;
-}
-
-.allimg {
-
+  }
+  
+  .card {
+    width: 250px;
+    margin: 10px 10px 50px 10px;
+    transition: all 0.35s ease-in-out;
+  }
+  .card:hover {
+    transform: scale(1.05);
+  }
+  
+  .opacbox {
+    /* border-radius: 10%; */
+    position: absolute;
+    width: 250px;
+    height: 375px;
+    border-radius: 10%;
+    background-color: firebrick;
+    background: rgba(0, 0, 0, 0.5);
+    opacity: 0;
+  }
+  
+  .card:hover .opacbox {
+    opacity: 1;
+  }
+  
+  .allimg {
     border-radius: 10%;
     width: 250px;
-}
-
-.header {
+  }
+  
+  
+  .overview {
+    width: 250px;
+    text-overflow: ellipsis;
+    padding: 20px;
+    color: #fff;
+  }
+  
+  .header {
     padding-left: 50px;
     font-style: italic;
     display: flex;
     flex-direction: row;
     align-items: flex-start;
     justify-content: flex-start;
-}
-
-#search {
+  }
+  
+  #search {
     font-size: 15px;
     margin: 15px 0px 0px 40px;
     padding: 10px 10px 10px 10px;
     width: 250px;
-
+  
     outline-color: rgba(216, 216, 216, 0.902);
-}
-
-#searchbtn {
+  }
+  
+  #searchbtn {
     margin-right: 20px;
     height: 40px;
     font-size: 15px;
     color: white;
     background-color: black;
-
-
-}
-
-#searchbtn:hover {
+  }
+  
+  #searchbtn:hover {
     height: 40px;
     font-size: 15px;
     color: white;
     background-color: black;
     border: solid 3px gray;
-}
-
-
-.allrank {
-    font-size: 40px;
-
-
-    font-weight: 900;
-
-    font-style: italic;
-}
-
-
-#allchart,
-#mychart {
+  }
+  
+  #allchart,
+  #mychart {
     margin: 15px 2px 0px 2px;
     width: 130px;
     height: 40px;
@@ -90,14 +128,12 @@
     background-color: black;
     border: 4px solid black;
     border-radius: 10%;
-
-}
-
-
-#allchart:focus,
-#mychart:focus,
-#allchart:hover,
-#mychart:hover {
+  }
+  
+  #allchart:focus,
+  #mychart:focus,
+  #allchart:hover,
+  #mychart:hover {
     margin: 15px 2px 0px 2px;
     width: 130px;
     height: 40px;
@@ -107,83 +143,73 @@
     background-color: white;
     border: 4px solid black;
     border-radius: 10%;
-}
-
-#mobilebtn {
+  }
+  
+  #mobilebtn {
     margin: 20px 2px 0px 20px;
     width: 80px;
     height: 30px;
     border: none;
-}
-
-#desktopbtn {
+  }
+  
+  #desktopbtn {
     margin: 20px 2px 0px 2px;
     width: 80px;
     height: 30px;
     border: none;
-}
-
-#mobilebtn:hover,
-#mobilebtn:focus {
+  }
+  
+  #mobilebtn:hover,
+  #mobilebtn:focus {
     margin: 20px 2px 0px 20px;
     width: 80px;
     height: 30px;
     border: solid 2px black;
-}
-
-
-#desktopbtn:hover,
-#desktopbtn:focus {
+  }
+  
+  #desktopbtn:hover,
+  #desktopbtn:focus {
     margin: 20px 2px 0px 2px;
     width: 80px;
     height: 30px;
     border: solid 2px black;
-}
-
-.lovebtn {
+  }
+  
+  .lovebtn {
     width: 30px;
     height: 30px;
     border: none;
     font-size: 30px;
     color: rgb(115, 0, 23);
     background-color: white;
-}
-
-.lovebtn:hover {
+  }
+  
+  .lovebtn:hover {
     width: 30px;
     height: 30px;
     border: none;
     font-size: 30px;
     color: red;
     background-color: white;
-}
-
-.alltime {
+  }
+  
+  .alltime {
     font-style: italic;
     font-weight: 900;
-}
-
-.allvote {
-    width: 300px;
-    margin: 55px 10px 0px 0px;
-    font-weight: 900;
-    font-size: 20px;
-    text-align: right;
-}
-
-
-.buttons {
+  }
+  
+  .buttons {
     height: 30px;
     margin-left: 20px;
-}
-
-.rankvote {
-    display: flex;
-    flex-direction: row;
-    height: 70px;
-}
-
-.details {
+  }
+  
+  /* .rankvote {
+      display: flex;
+      flex-direction: row;
+      height: 70px;
+  } */
+  
+  .details {
     width: 70px;
     height: 30px;
     font-size: 15px;
@@ -192,9 +218,9 @@
     background-color: black;
     border: 4px solid black;
     border-radius: 10%;
-}
-
-.details:hover {
+  }
+  
+  .details:hover {
     width: 70px;
     height: 30px;
     font-size: 15px;
@@ -203,4 +229,4 @@
     background-color: white;
     border: 4px solid black;
     border-radius: 10%;
-}
+  }
