--- a/css/detail.css
+++ b/css/detail.css
@@ -1,3 +1,28 @@
+.delete_to_modal {
+    font-size: 15px;
+    font-weight: 600;
+    color: white;
+
+    background-color: black;
+    border-color: transparent;
+    border-radius: 15px;
+
+    width: 70px;
+
+    /* display: flex;
+    justify-content: center;
+    align-items: center;
+
+    margin-top: auto;
+    margin-bottom: 10px; */
+}
+
+.delete_to_modal:hover {
+    background-color: white;
+    color: black;
+    border-color: black;
+}
+
 /* modal */
 #modal {
     display: none;
@@ -26,14 +51,17 @@
 #modal_up.active {
     color: black;
 
-    display: block;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     word-wrap: break-word;
     position: fixed;
-    
+
     padding: 20px;
-    
+
     width: 200px;
-    height: 100px;
+    height: 140px;
 
     z-index: 2;
 
@@ -44,7 +72,47 @@
     background-color: white;
     border-radius: 20px;
 }
-/* modal */
+
+#user_id,
+#user_pw {
+    border-color: rgba(216, 216, 216, 0.4);
+    border-radius: 5px;
+
+    outline-color: rgba(216, 216, 216, 0.8);
+
+    width: 200px;
+    height: 30px;
+
+    margin-bottom: 5px;
+    margin-top: 5px;
+}
+
+.delete_in_modal {
+    font-size: 15px;
+    font-weight: 600;
+    color: white;
+
+    background-color: black;
+    border-color: transparent;
+    border-radius: 15px;
+
+    width: 70px;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    margin-top: auto; /* 세로 중앙 정렬 */
+    margin-bottom: 10px;
+}
+
+.delete_in_modal:hover {
+    background-color: white;
+    color: black;
+    border-color: black;
+}
+
+/* modal - end */
 
 #homebox {
     text-align: center;
@@ -220,39 +288,4 @@
     font-style: italic;
     font-weight: 900;
     font-size: 15px;
-}
-
-.modal {
-    position: absolute;
-    top: 0;
-    left: 0;
-
-    width: 100%;
-    height: 100%;
-
-    display: none;
-
-}
-
-.modal.show {
-    display: block;
-}
-
-.modal_body {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-
-    width: 300px;
-    height: 300px;
-
-    padding: 40px;
-
-    text-align: center;
-
-    background-color: rgb(255, 255, 255);
-    border-radius: 10px;
-    box-shadow: 0 2px 3px 0 rgba(34, 36, 38, 0.15);
-
-    transform: translateX(-50%) translateY(-50%);
 }
