--- a/css/detail_modal.css
+++ b/css/detail_modal.css
@@ -1,3 +1,119 @@
+.delete_to_modal {
+    font-size: 15px;
+    font-weight: 600;
+    color: white;
+
+    background-color: black;
+    border-color: transparent;
+    border-radius: 15px;
+
+    width: 70px;
+
+    /* display: flex;
+    justify-content: center;
+    align-items: center;
+
+    margin-top: auto;
+    margin-bottom: 10px; */
+}
+
+.delete_to_modal:hover {
+    background-color: white;
+    color: black;
+    border-color: black;
+}
+
+/* modal */
+#modal {
+    display: none;
+}
+
+/* 'modal' 외부의 영역입니다. */
+#modal.active {
+    display: block;
+    position: fixed;
+    top: 0;
+    left: 0;
+    /* 100%로 변경했습니다. */
+    width: 100%;
+    /* 100%로 변경했습니다. */
+    height: 100%;
+    background-color: #000000;
+    opacity: 0.8;
+    z-index: 1;
+}
+
+#modal_up {
+    display: none;
+}
+
+/* 'modal' 창입니다. */
+#modal_up.active {
+    color: black;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    word-wrap: break-word;
+    position: fixed;
+
+    padding: 20px;
+
+    width: 200px;
+    height: 140px;
+
+    z-index: 2;
+
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+
+    background-color: white;
+    border-radius: 20px;
+}
+
+#user_id,
+#user_pw {
+    border-color: rgba(216, 216, 216, 0.4);
+    border-radius: 5px;
+
+    outline-color: rgba(216, 216, 216, 0.8);
+
+    width: 200px;
+    height: 30px;
+
+    margin-bottom: 5px;
+    margin-top: 5px;
+}
+
+.delete_in_modal {
+    font-size: 15px;
+    font-weight: 600;
+    color: white;
+
+    background-color: black;
+    border-color: transparent;
+    border-radius: 15px;
+
+    width: 70px;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    margin-top: auto; /* 세로 중앙 정렬 */
+    margin-bottom: 10px;
+}
+
+.delete_in_modal:hover {
+    background-color: white;
+    color: black;
+    border-color: black;
+}
+
+/* modal - end */
+
 #homebox {
     text-align: center;
     padding: 50px 0px 50px 0px;
@@ -29,7 +145,7 @@
     border: 4px solid black;
 }
 
-#home:focus {
+#home:focuss {
     background-color: white;
     border: none;
     width: 150px;
@@ -55,10 +171,12 @@
 }
 
 #card {
+
     width: 440px
 }
 
 #overview {
+
     padding: 0px 20px 20px 20px;
     width: 400px;
     font-size: 20px;
@@ -68,6 +186,7 @@
 }
 
 #reviewbox {
+
     border-radius: 10px;
     width: 400px;
     margin: 20px 20px 20px 20px;
