--- a/css/mobiledetail.css
+++ b/css/mobiledetail.css
@@ -29,6 +29,7 @@
     border: 4px solid black;
 }
 
+
 #home:active {
     background-color: black;
     border: none;
@@ -141,8 +142,8 @@
 
 #container {
     display: flex;
-    flex-direction: row;
-    align-items: flex-start;
+    flex-direction: column;
+    align-items: center;
     justify-content: center;
     margin-top: 20px;
 }
